--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 	"dependencies": {
 		"@tailwindcss/postcss7-compat": "^2.2.17",
 		"autoprefixer": "^9",
+		"axios": "^0.26.1",
 		"core-js": "^3.8.3",
 		"postcss": "^7",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
 		"vue": "^3.2.13",
+		"vue-axios": "^3.4.1",
 		"vuex": "^4.0.0"
 	},
 	"devDependencies": {
@@ -27,6 +29,8 @@
 		"eslint-plugin-vue": "^8.0.3",
 		"sass": "^1.32.7",
 		"sass-loader": "^12.0.0",
-		"vue-cli-plugin-tailwind": "^2.2.18"
+		"vue-cli-plugin-tailwind": "^2.2.18",
+		"prettier-plugin-tailwindcss": "^0.1.3",
+		"dotenv-webpack": "^7.0.3"
 	}
 }
